ФЗ12
Изменения по замечаниям ревью
- убран закомментированный код
- исключены запросы к БД в цикле